Add Templates' components

--- a/styles/layout/templates/_apollo.scss
+++ b/styles/layout/templates/_apollo.scss
@@ -1,9 +1,731 @@
-.hero {
-    width: 100%;
-    background: #1d1d1d;
-    border-radius: 2.28rem;
+.apollo {
+    display: flex;
+    flex-direction: column;
+    gap: 2.19rem;
 
-    h1{
-        color: #FFF;
+    &-hero {
+        width: 100%;
+        height: 36.25rem;
+        background: #1D1D1D;
+        border-radius: 2rem;
+        position: relative;
+        overflow: hidden;
+
+        &-card {
+            position: relative;
+            z-index: 26;
+            width: 29rem;
+            margin-left: 10rem;
+            margin-top: 9.81rem;
+            border-radius: 1.5rem;
+            border: 1px solid rgba(255, 255, 255, 0.24);
+            background: linear-gradient(180deg, rgba(170, 140, 255, 0.00) 0%, rgba(170, 140, 255, 0.80) 100%), rgba(255, 255, 255, 0.10);
+            box-shadow: 0px 2px 4px 0px rgba(255, 255, 255, 0.24) inset, 0px 48px 80px 0px rgba(0, 0, 0, 0.08), 0px -5px 13px -2px rgba(255, 255, 255, 0.55) inset;
+            backdrop-filter: blur(2px);
+            padding: 2.25rem 1.75rem;
+
+            &-logo {
+                height: 2.5rem;
+            }
+
+            p {
+                color: #FFF;
+                font-size: 0.875rem;
+                font-weight: 400;
+                line-height: normal;
+                margin-top: 1rem;
+            }
+
+            &-buttons {
+                display: flex;
+                align-items: center;
+                gap: 1rem;
+                margin-top: 2rem;
+
+                button {
+                    height: 2.5rem;
+                    flex: 1;
+                    border-radius: 3rem;
+                    color: #fff;
+                    font-size: 0.875rem;
+                    font-weight: 700;
+                    line-height: 1.0625rem;
+                    cursor: pointer;
+                    transition: all 0.15s ease;
+                }
+
+                &-btn1 {
+                    border: 1px solid #212121;
+                    background: #212121;
+
+                    &:hover {
+                        border-color: #2563EB;
+                        background-color: #2563EB;
+                    }
+                }
+
+                &-btn2 {
+                    border: 1px solid #3B82F6;
+                    background: #3B82F6;
+
+                    &:hover {
+                        background-color: #2563EB;
+                        border-color: #2563EB;
+                    }
+                }
+            }
+
+            &-links {
+                margin-top: 1rem;
+                display: flex;
+                align-items: center;
+                gap: 1rem;
+
+                a {
+                    display: flex;
+                    align-items: flex-end;
+                    gap: 0.5rem;
+                    color: #fff;
+
+                    span {
+                        font-size: 0.75rem;
+                        font-weight: 300;
+                        line-height: normal;
+                        text-decoration-line: underline;
+                    }
+                }
+            }
+        }
+
+        &-dashboard1 {
+            z-index: 4;
+            position: absolute;
+            top: 2.02rem;
+            left: 60rem;
+            width: 37.875rem;
+            box-shadow: 0px 0px 43.64997px 0px rgba(0, 0, 0, 0.12);
+        }
+
+        &-dashboard2 {
+            z-index: 3;
+            position: absolute;
+            top: 2.02rem;
+            left: 42rem;
+            width: 37.875rem;
+            box-shadow: 0px 0px 43.64997px 0px rgba(0, 0, 0, 0.12);
+        }
+
+        &-pattern {
+            width: 96rem;
+            height: auto;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            z-index: 2;
+            mix-blend-mode: overlay;
+        }
+
+        &-rectangle1 {
+            width: 69.6875rem;
+            height: 35.375rem;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 1;
+        }
+
+        &-light {
+            width: 25.25rem;
+            height: auto;
+            position: absolute;
+            top: 0;
+            left: 12rem;
+            z-index: 3;
+        }
+    }
+
+    &-features-animation {
+        border-radius: 2rem;
+        background: var(--surface-0, #FFF);
+        padding: 5rem;
+    }
+
+    &-configuration {
+        padding: 5rem 0;
+        border-radius: 2rem;
+        background: var(--surface-0, #FFF);
+    }
+
+    &-youtube {
+        padding: 5rem 7.5rem;
+        background-color: var(--surface-0);
+        border-radius: 2rem;
+    }
+
+    &-features1 {
+        padding: 5rem 0;
+        border-radius: 2rem;
+        background: var(--surface-0, #FFF);
+    }
+
+    &-features2 {
+        padding: 7rem 0;
+        border-radius: 2rem;
+        background: var(--surface-0, #FFF);
+    }
+
+    &-related {
+        padding: 5rem 0;
+        border-radius: 2rem;
+        background: var(--surface-0, #FFF);
+    }
+}
+
+@include mobile {
+    .apollo {
+        &-hero {
+            height: 53.25rem;
+            padding: 8rem 1.5rem 1.5rem;
+
+            &-card {
+                width: 100%;
+                margin-left: 0rem;
+                margin-top: 0rem;
+
+                &-links {
+                    justify-content: center;
+                }
+            }
+
+            &-dashboard1 {
+                top: 30rem;
+                left: 12rem;
+                width: 28rem;
+            }
+
+            &-dashboard2 {
+                top: 30rem;
+                left: 1.5rem;
+                width: 28rem;
+            }
+
+            &-pattern {
+                width: 90rem;
+            }
+
+            &-rectangle1 {
+                height: 49.125rem;
+                left: 10rem;
+                position: absolute;
+                top: 0;
+                left: -10.125rem;
+                z-index: 1;
+            }
+
+            &-light {
+                width: 25.25rem;
+                height: 6rem;
+                position: absolute;
+                top: 0;
+                left: 50%;
+                transform: translateX(-50%);
+                z-index: 3;
+            }
+        }
+
+    }
+}
+
+.template {
+    &-youtube {
+        &-title {
+            h2 {
+                margin: 0;
+                text-align: center;
+                line-height: 4rem;
+                font-size: 3rem;
+                font-weight: 600;
+                color: var(--surface-900);
+
+                @include mobile {
+                    font-size: 1.5rem;
+                }
+            }
+        }
+
+        &-description {
+            font-size: 0.875rem;
+            font-weight: 400;
+            line-height: 1.25rem;
+            text-align: center;
+            color: var(--surface-900);
+            width: 45rem;
+            margin: 1.25rem auto 0;
+
+            @include mobile {
+                font-size: 0.875rem;
+                line-height: 1.25rem;
+                width: auto;
+            }
+        }
+
+        &-screen {
+            margin: 3rem auto 0;
+            width: 66.25rem;
+
+            @include mobile {
+                width: 100%;
+            }
+
+            border-radius: 1.3125rem;
+            background: #E0E0F7;
+            box-shadow: 0px 8px 32px 0px rgba(0, 0, 0, 0.02);
+
+            cursor: pointer;
+            position: relative;
+
+            &-blur {
+                width: 100%;
+                position: absolute;
+                height: 100%;
+                top: 0;
+                left: 0;
+                z-index: 4;
+                backdrop-filter: blur(2px);
+                background: rgba(255, 255, 255, 0.06);
+                border-radius: 1.3125rem;
+
+                @include mobile {
+                    backdrop-filter: blur(0.6622641086578369px);
+                }
+            }
+
+            &-play {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translateX(-50%) translateY(-50%);
+                z-index: 5;
+            }
+
+            img {
+                width: 100%;
+                height: auto;
+                border-radius: 0.875rem;
+            }
+        }
+    }
+}
+
+.template {
+    &-features1 {
+        display: flex;
+        gap: 1.5rem;
+        margin: 0 auto;
+        width: fit-content;
+
+        @include mobile {
+            flex-direction: column;
+        }
+
+        &-card {
+            padding: 1.25rem;
+            border-radius: 1.3125rem;
+            border: 1px solid var(--surface-200, #EEE);
+            background: var(--surface-0, #FFF);
+            width: 21.125rem;
+
+            @include mobile {
+                border-radius: 1rem;
+            }
+
+            &-top {
+                width: 100%;
+                margin-bottom: 1.25rem;
+
+                img {
+                    width: 100%;
+                }
+            }
+
+            &-bottom {
+                &-title {
+                    color: var(--surface-900);
+                    font-size: 1.09375rem;
+                    font-weight: 600;
+                    line-height: 1.3125rem;
+                    margin-top: 0;
+                    margin-bottom: 0.75rem;
+                }
+
+                &-description {
+                    color: var(--surface-600);
+                    font-size: 0.875rem;
+                    font-weight: 400;
+                    line-height: 1.3125rem;
+                    margin: 0;
+                }
+            }
+        }
+    }
+}
+
+.template {
+    &-features2 {
+        margin: 0 auto;
+        width: fit-content;
+        display: flex;
+        align-items: flex-start;
+        flex-wrap: wrap;
+        width: 52.75rem;
+        gap: 1.5rem;
+
+        @include mobile {
+            width: 100%;
+            max-width: 40rem;
+            align-items: center;
+            justify-content: center;
+        }
+
+        &-card {
+            width: 25.625rem;
+            padding: 1.25rem;
+            border-radius: 1.3125rem;
+            border: 1px solid var(--surface-200);
+            background: var(--surface-0);
+
+            &-img {
+                height: 15.125rem;
+                width: auto;
+            }
+
+            &-withMargin {
+                margin-top: 7.81rem;
+
+                @include mobile {
+                    margin-top: 0;
+                }
+            }
+
+            &-withoutMargin {
+                margin-top: -7.81rem;
+
+                @include mobile {
+                    margin-top: 0;
+                }
+            }
+
+            h2 {
+                margin: 1.25rem 0 0;
+                color: var(--surface-900, var(--surface-900, #212121));
+                font-size: 1.09375rem;
+                font-weight: 600;
+                line-height: 1.3125rem;
+            }
+
+            p {
+                margin: 0.75rem 0 0;
+                color: var(--surface-600, #757575);
+                font-size: 0.875rem;
+                font-weight: 400;
+                line-height: 1.3125rem;
+            }
+        }
+    }
+}
+
+.template {
+    &-related {
+        &-title {
+            text-align: center;
+            color: var(--surface-900, var(--surface-900, #212121));
+            font-size: 3rem;
+            font-weight: 600;
+            line-height: 3.5rem;
+
+            @include mobile {
+                font-size: 1.5rem;
+            }
+        }
+
+        &-slide {
+            display: flex;
+            width: fit-content;
+            margin: 3rem auto 0;
+            gap: 1.5rem;
+
+            @include mobile {
+                flex-direction: column;
+                gap: 3rem;
+            }
+
+            &-card {
+                border-radius: 1.3125rem;
+                border: 1px solid var(--surface-200, #EEE);
+                background: var(--surface-0, #FFF);
+                padding: 1.25rem;
+
+                img {
+                    width: 18.625rem;
+                    height: auto;
+                    border-radius: 0.65625rem;
+                }
+
+                @include mobile {
+                    border-radius: 1rem;
+
+                    img {
+                        border-radius: 0.5rem;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.template {
+    &-configuration {
+        padding: 2rem;
+        border-radius: 1.75rem;
+        border: 1px solid var(--surface-200, #EEE);
+        background: var(--surface-0, #FFF);
+        width: 49.25rem;
+        margin: 0 auto;
+
+        @include mobile {
+            width: 21.9375rem;
+            padding: 1rem;
+            border-radius: 1rem;
+        }
+
+        &-title {
+            font-size: 1.53125rem;
+            font-weight: 700;
+            line-height: 1.8125rem;
+            color: var(--surface-900, var(--surface-900, #212121));
+        }
+
+        &-description {
+            color: var(--surface-600, #757575);
+            font-size: 1.09375rem;
+            font-weight: 400;
+            line-height: 1.64375rem;
+            margin: 0.75rem 0 0;
+        }
+
+        &-screen {
+            border-radius: 0.875rem;
+            border: 1px solid var(--surface-border, #DFE7EF);
+
+            &-top {
+                border-radius: 0.75rem 0.75rem 0rem 0rem;
+                background: var(--surface-0, #FFF);
+                padding: 0.25rem 1.5rem;
+                height: 3.5rem;
+                display: flex;
+                align-items: center;
+                gap: 0.5rem;
+
+                &-circle {
+                    width: 0.75rem;
+                    height: 0.75rem;
+                    border-radius: 999px;
+                }
+
+                &-close {
+                    background-color: #ED6B5D;
+                }
+
+                &-minimize {
+                    background-color: #F4BE50;
+                }
+
+                &-zoom {
+                    background-color: #61C554;
+                }
+            }
+
+            &-bottom {
+                padding: 1.5rem;
+                background: var(--surface-900, #212121);
+                border-bottom-left-radius: inherit;
+                border-bottom-right-radius: inherit;
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+                position: relative;
+
+                p {
+                    color: var(--surface-0, #FFF);
+                    font-size: 0.875rem;
+                    font-weight: 400;
+                    line-height: 1.0625rem;
+                    margin: 0;
+                }
+
+                &-logo {
+                    width: 7.5rem;
+                    height: 7.5rem;
+                    position: absolute;
+                    right: 1.5rem;
+                    bottom: 1.38rem;
+
+                    @include mobile {
+                        width: 5.25rem;
+                        height: 5.25rem;
+                        right: 0.88rem;
+                        bottom: 0.88rem;
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+.template {
+    &-features-animation {
+        display: flex;
+        gap: 2.5rem;
+        width: fit-content;
+        margin: 0 auto;
+        padding: 1.75rem;
+        border-radius: 1.75rem;
+        border: 1px solid var(--surface-200, #EEE);
+
+        &-left {
+            width: 30rem;
+            display: flex;
+            flex-direction: column;
+            gap: 0.5rem;
+
+            &-card {
+                padding: 1rem;
+                display: flex;
+                align-items: flex-start;
+                gap: 1.25rem;
+                cursor: pointer;
+                transition: all 0.2s ease;
+
+                &-active {
+                    border-radius: 0.75rem;
+                    background: var(--surface-100, #F5F5F5);
+                    transition: all 0.2s ease;
+                }
+
+                &:hover {
+                    border-radius: 0.75rem;
+                    background: var(--surface-100, #F5F5F5);
+                }
+
+                &-order {
+                    font-size: 3rem;
+                    font-weight: 700;
+                    margin: 0;
+                    color: white;
+                    text-shadow:
+                        1px 1px 0 #9E9E9E,
+                        -1px 1px 0 #9E9E9E,
+                        -1px -1px 0 #9E9E9E,
+                        1px -1px 0 #9E9E9E;
+                }
+
+                h5 {
+                    color: var(--surface-900, var(--color-surface-900, #212121));
+                    font-size: 1.09375rem;
+                    font-weight: 600;
+                    line-height: 1.3125rem;
+                    margin: 0;
+                }
+
+                p {
+                    color: var(--surface-600, #757575);
+                    font-size: 0.875rem;
+                    font-weight: 400;
+                    line-height: 1.3125rem;
+                    margin: 0.38rem 0 0;
+                }
+            }
+        }
+
+        &-right {
+            width: 30rem;
+
+            img {
+                width: 100%;
+                height: auto;
+            }
+
+            &-inline {
+                width: 100%;
+                height: 100%;
+                border-radius: 0.75rem;
+                background: var(--surface-ground);
+                padding-top: 3.88rem;
+                position: relative;
+                
+                &-image{
+                    width: 25.4375rem;
+                    margin: 1.25rem auto 0;
+                    img{
+                        box-shadow: 0px 0px 48px 0px rgba(0, 0, 0, 0.08);
+                        border-radius: 0.25rem;
+                    }
+                }
+                &-tabs {
+                    display: flex;
+                    align-items: center;
+                    gap: 0.25rem;
+                    border-radius: 2.5rem;
+                    border: 1px solid var(--surface-border);
+                    background: #FFF;
+                    padding: 0.25rem;
+                    width: fit-content;
+                    margin: 0 auto 0;
+
+                    
+                    button {
+                        padding: 0.21875rem 0.5rem;
+                        border-radius: 2.25rem;
+                        color: var(--surface-900);
+                        background: #fff;
+                        border: none;
+                        outline: none;
+                        font-size: 0.75rem;
+                        font-weight: 500;
+                        line-height: 1rem;
+                        letter-spacing: -0.015rem;
+                        cursor: pointer;
+                        transition: all 0.15s ease;
+                        &:hover{
+                            background: var(--surface-ground);
+                        }
+
+                        
+                    }
+                    &-btnActive {
+                        background: var(--surface-ground) !important;
+
+                    }
+                }
+            }
+        }
+    }
+}
+
+@include mobile {
+    .template {
+        &-features-animation {
+            flex-direction: column-reverse;
+            gap: 1.31rem;
+
+            &-left {
+                width: 100%;
+            }
+
+            &-right {
+                width: 100%;
+            }
+        }
     }
 }
