--- a/styles/layout/layout.scss
+++ b/styles/layout/layout.scss
@@ -16,3 +16,9 @@
 @import './_responsive';
 @import './landing/_landing';
 @import './templates/_apollo';
+@import './templates/_atlantis';
+@import './templates/_ultima';
+@import './templates/_freya';
+@import './templates/_verona';
+@import './templates/_diamond';
+@import './templates/_templates';
