--- a/styles/layout/templates/_diamond.scss
+++ b/styles/layout/templates/_diamond.scss
@@ -1,4 +1,4 @@
-.apollo {
+.diamond {
     display: flex;
     flex-direction: column;
     gap: 2.19rem;
@@ -6,7 +6,7 @@
     &-hero {
         width: 100%;
         height: 36.25rem;
-        background: #1D1D1D;
+        background: #282960;
         border-radius: 2rem;
         position: relative;
         overflow: hidden;
@@ -19,9 +19,9 @@
             margin-top: 9.81rem;
             border-radius: 1.5rem;
             border: 1px solid rgba(255, 255, 255, 0.24);
-            background: linear-gradient(180deg, rgba(170, 140, 255, 0.00) 0%, rgba(170, 140, 255, 0.80) 100%), rgba(255, 255, 255, 0.10);
+            background: linear-gradient(180deg, rgba(255, 255, 255, 0.00) 0%, rgba(41, 42, 97, 0.30) 100%), rgba(255, 255, 255, 0.10);
             box-shadow: 0px 2px 4px 0px rgba(255, 255, 255, 0.24) inset, 0px 48px 80px 0px rgba(0, 0, 0, 0.08), 0px -5px 13px -2px rgba(255, 255, 255, 0.55) inset;
-            backdrop-filter: blur(2px);
+            backdrop-filter: blur(3px);
             padding: 2.25rem 1.75rem;
 
             &-logo {
@@ -116,13 +116,12 @@
         }
 
         &-pattern {
-            width: 96rem;
-            height: auto;
+            width: 62.3125rem;
+            height: 44.8125rem;
             position: absolute;
-            bottom: 0;
-            left: 0;
+            top: -3.62;
+            left: -3.06;
             z-index: 1;
-            mix-blend-mode: overlay;
         }
 
         &-rectangle1 {
@@ -148,11 +147,12 @@
 }
 
 @include mobile {
-    .apollo {
+    .diamond {
         &-hero {
             height: 53.25rem;
             padding: 8rem 1.25rem 1.25rem;
             border-radius: 1rem;
+
             &-card {
                 width: 100%;
                 margin-left: 0rem;
@@ -176,7 +176,10 @@
             }
 
             &-pattern {
-                width: 90rem;
+                width: 60rem;
+                height: auto;
+                bottom: 0;
+                left: -8rem;
             }
 
             &-rectangle1 {
@@ -201,4 +204,3 @@
 
     }
 }
-
