--- a/styles/layout/templates/_freya.scss
+++ b/styles/layout/templates/_freya.scss
@@ -1,4 +1,4 @@
-.apollo {
+.freya {
     display: flex;
     flex-direction: column;
     gap: 2.19rem;
@@ -6,7 +6,7 @@
     &-hero {
         width: 100%;
         height: 36.25rem;
-        background: #1D1D1D;
+        background: #084A42;
         border-radius: 2rem;
         position: relative;
         overflow: hidden;
@@ -19,9 +19,9 @@
             margin-top: 9.81rem;
             border-radius: 1.5rem;
             border: 1px solid rgba(255, 255, 255, 0.24);
-            background: linear-gradient(180deg, rgba(170, 140, 255, 0.00) 0%, rgba(170, 140, 255, 0.80) 100%), rgba(255, 255, 255, 0.10);
+            background: linear-gradient(180deg, rgba(18, 253, 225, 0.00) 0%, rgba(18, 253, 225, 0.50) 100%), rgba(255, 255, 255, 0.10);
             box-shadow: 0px 2px 4px 0px rgba(255, 255, 255, 0.24) inset, 0px 48px 80px 0px rgba(0, 0, 0, 0.08), 0px -5px 13px -2px rgba(255, 255, 255, 0.55) inset;
-            backdrop-filter: blur(2px);
+            backdrop-filter: blur(1.5px);
             padding: 2.25rem 1.75rem;
 
             &-logo {
@@ -98,7 +98,7 @@
         }
 
         &-dashboard1 {
-            z-index: 7;
+            z-index: 4;
             position: absolute;
             top: 2.02rem;
             left: 60rem;
@@ -107,7 +107,7 @@
         }
 
         &-dashboard2 {
-            z-index: 6;
+            z-index: 3;
             position: absolute;
             top: 2.02rem;
             left: 42rem;
@@ -116,13 +116,12 @@
         }
 
         &-pattern {
-            width: 96rem;
-            height: auto;
+            height: 26rem;
+            width: auto;
             position: absolute;
             bottom: 0;
             left: 0;
-            z-index: 1;
-            mix-blend-mode: overlay;
+            z-index: 2;
         }
 
         &-rectangle1 {
@@ -131,7 +130,7 @@
             position: absolute;
             top: 0;
             left: 0;
-            z-index: 4;
+            z-index: 1;
             mix-blend-mode: screen;
         }
 
@@ -141,18 +140,19 @@
             position: absolute;
             top: 0;
             left: 12rem;
-            z-index: 5;
+            z-index: 3;
         }
     }
 
 }
 
 @include mobile {
-    .apollo {
+    .freya {
         &-hero {
             height: 53.25rem;
             padding: 8rem 1.25rem 1.25rem;
             border-radius: 1rem;
+
             &-card {
                 width: 100%;
                 margin-left: 0rem;
@@ -176,7 +176,8 @@
             }
 
             &-pattern {
-                width: 90rem;
+                width: 70rem;
+                height: 30rem;
             }
 
             &-rectangle1 {
@@ -201,4 +202,3 @@
 
     }
 }
-
