--- a/styles/layout/templates/_ultima.scss
+++ b/styles/layout/templates/_ultima.scss
@@ -1,4 +1,4 @@
-.apollo {
+.ultima {
     display: flex;
     flex-direction: column;
     gap: 2.19rem;
@@ -6,7 +6,7 @@
     &-hero {
         width: 100%;
         height: 36.25rem;
-        background: #1D1D1D;
+        background: #192048;
         border-radius: 2rem;
         position: relative;
         overflow: hidden;
@@ -19,9 +19,9 @@
             margin-top: 9.81rem;
             border-radius: 1.5rem;
             border: 1px solid rgba(255, 255, 255, 0.24);
-            background: linear-gradient(180deg, rgba(170, 140, 255, 0.00) 0%, rgba(170, 140, 255, 0.80) 100%), rgba(255, 255, 255, 0.10);
+            background: linear-gradient(180deg, rgba(18, 53, 253, 0.00) 0%, rgba(18, 53, 253, 0.50) 100%), rgba(255, 255, 255, 0.10);
             box-shadow: 0px 2px 4px 0px rgba(255, 255, 255, 0.24) inset, 0px 48px 80px 0px rgba(0, 0, 0, 0.08), 0px -5px 13px -2px rgba(255, 255, 255, 0.55) inset;
-            backdrop-filter: blur(2px);
+            backdrop-filter: blur(3px);
             padding: 2.25rem 1.75rem;
 
             &-logo {
@@ -98,31 +98,30 @@
         }
 
         &-dashboard1 {
-            z-index: 7;
+            z-index: 4;
             position: absolute;
-            top: 2.02rem;
+            top: 2.44rem;
             left: 60rem;
             width: 37.875rem;
             box-shadow: 0px 0px 43.64997px 0px rgba(0, 0, 0, 0.12);
         }
 
         &-dashboard2 {
-            z-index: 6;
+            z-index: 3;
             position: absolute;
-            top: 2.02rem;
+            top: 2.44rem;
             left: 42rem;
             width: 37.875rem;
             box-shadow: 0px 0px 43.64997px 0px rgba(0, 0, 0, 0.12);
         }
 
         &-pattern {
-            width: 96rem;
+            width: 60rem;
             height: auto;
             position: absolute;
             bottom: 0;
             left: 0;
-            z-index: 1;
-            mix-blend-mode: overlay;
+            z-index: 2;
         }
 
         &-rectangle1 {
@@ -131,28 +130,29 @@
             position: absolute;
             top: 0;
             left: 0;
-            z-index: 4;
+            z-index: 1;
             mix-blend-mode: screen;
         }
 
         &-light {
             width: 25.25rem;
-            height: 4rem;
+            height: 3.5625rem;
             position: absolute;
             top: 0;
             left: 12rem;
-            z-index: 5;
+            z-index: 3;
         }
     }
 
 }
 
 @include mobile {
-    .apollo {
+    .ultima {
         &-hero {
             height: 53.25rem;
             padding: 8rem 1.25rem 1.25rem;
             border-radius: 1rem;
+
             &-card {
                 width: 100%;
                 margin-left: 0rem;
@@ -164,19 +164,22 @@
             }
 
             &-dashboard1 {
+                border-radius: 0.375rem;
                 top: 30rem;
                 left: 12rem;
                 width: 28rem;
             }
 
             &-dashboard2 {
+                border-radius: 0.375rem;
                 top: 30rem;
                 left: 1.5rem;
                 width: 28rem;
             }
 
             &-pattern {
-                width: 90rem;
+                width: 80rem;
+                left: -5rem;
             }
 
             &-rectangle1 {
@@ -190,7 +193,7 @@
 
             &-light {
                 width: 25.25rem;
-                height: 6rem;
+                height: 4rem;
                 position: absolute;
                 top: 0;
                 left: 50%;
@@ -201,4 +204,3 @@
 
     }
 }
-
