--- a/styles/layout/templates/_freya.scss
+++ b/styles/layout/templates/_freya.scss
@@ -1,146 +1,60 @@
 .freya {
-    display: flex;
-    flex-direction: column;
-    gap: 2.19rem;
+    .template {
+        &-hero {
+            background: #084A42;
 
-    &-hero {
-        width: 100%;
-        height: 36.25rem;
-        background: #084A42;
-        border-radius: 2rem;
-        position: relative;
-        overflow: hidden;
-
-        &-card {
-            position: relative;
-            z-index: 26;
-            width: 29rem;
-            margin-left: 10rem;
-            margin-top: 9.81rem;
-            border-radius: 1.5rem;
-            border: 1px solid rgba(255, 255, 255, 0.24);
-            background: linear-gradient(180deg, rgba(18, 253, 225, 0.00) 0%, rgba(18, 253, 225, 0.50) 100%), rgba(255, 255, 255, 0.10);
-            box-shadow: 0px 2px 4px 0px rgba(255, 255, 255, 0.24) inset, 0px 48px 80px 0px rgba(0, 0, 0, 0.08), 0px -5px 13px -2px rgba(255, 255, 255, 0.55) inset;
-            backdrop-filter: blur(1.5px);
-            padding: 2.25rem 1.75rem;
-
-            &-logo {
-                height: 2.5rem;
+            &-card {
+                border: 1px solid rgba(255, 255, 255, 0.24);
+                background: linear-gradient(180deg, rgba(18, 253, 225, 0.00) 0%, rgba(18, 253, 225, 0.50) 100%), rgba(255, 255, 255, 0.10);
+                box-shadow: 0px 2px 4px 0px rgba(255, 255, 255, 0.24) inset, 0px 48px 80px 0px rgba(0, 0, 0, 0.08), 0px -5px 13px -2px rgba(255, 255, 255, 0.55) inset;
+                backdrop-filter: blur(1.5px);
             }
 
-            p {
-                color: #FFF;
-                font-size: 0.875rem;
-                font-weight: 400;
-                line-height: normal;
-                margin: 1rem 0 0;
+            &-dashboard1 {
+                z-index: 4;
+                position: absolute;
+                top: 2.02rem;
+                left: 60rem;
+                width: 37.875rem;
+                box-shadow: 0px 0px 43.64997px 0px rgba(0, 0, 0, 0.12);
             }
 
-            &-buttons {
-                display: flex;
-                align-items: center;
-                gap: 1rem;
-                margin-top: 2rem;
-
-                button {
-                    height: 2.5rem;
-                    flex: 1;
-                    border-radius: 3rem;
-                    color: #fff;
-                    font-size: 0.875rem;
-                    font-weight: 700;
-                    line-height: 1.0625rem;
-                    cursor: pointer;
-                    transition: all 0.15s ease;
-                }
-
-                &-btn1 {
-                    border: 1px solid #212121;
-                    background: #212121;
-
-                    &:hover {
-                        border-color: #2563EB;
-                        background-color: #2563EB;
-                    }
-                }
-
-                &-btn2 {
-                    border: 1px solid #3B82F6;
-                    background: #3B82F6;
-
-                    &:hover {
-                        background-color: #2563EB;
-                        border-color: #2563EB;
-                    }
-                }
+            &-dashboard2 {
+                z-index: 3;
+                position: absolute;
+                top: 2.02rem;
+                left: 42rem;
+                width: 37.875rem;
+                box-shadow: 0px 0px 43.64997px 0px rgba(0, 0, 0, 0.12);
             }
 
-            &-links {
-                margin-top: 1rem;
-                display: flex;
-                align-items: center;
-                gap: 1rem;
-
-                a {
-                    display: flex;
-                    align-items: flex-end;
-                    gap: 0.5rem;
-                    color: #fff;
-
-                    span {
-                        font-size: 0.75rem;
-                        font-weight: 300;
-                        line-height: normal;
-                        text-decoration-line: underline;
-                    }
-                }
+            &-pattern {
+                height: 26rem;
+                width: auto;
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                z-index: 2;
             }
-        }
 
-        &-dashboard1 {
-            z-index: 4;
-            position: absolute;
-            top: 2.02rem;
-            left: 60rem;
-            width: 37.875rem;
-            box-shadow: 0px 0px 43.64997px 0px rgba(0, 0, 0, 0.12);
-        }
+            &-rectangle1 {
+                width: 69.6875rem;
+                height: 35.375rem;
+                position: absolute;
+                top: 0;
+                left: 0;
+                z-index: 1;
+                mix-blend-mode: screen;
+            }
 
-        &-dashboard2 {
-            z-index: 3;
-            position: absolute;
-            top: 2.02rem;
-            left: 42rem;
-            width: 37.875rem;
-            box-shadow: 0px 0px 43.64997px 0px rgba(0, 0, 0, 0.12);
-        }
-
-        &-pattern {
-            height: 26rem;
-            width: auto;
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            z-index: 2;
-        }
-
-        &-rectangle1 {
-            width: 69.6875rem;
-            height: 35.375rem;
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: 1;
-            mix-blend-mode: screen;
-        }
-
-        &-light {
-            width: 25.25rem;
-            height: 4rem;
-            position: absolute;
-            top: 0;
-            left: 12rem;
-            z-index: 3;
+            &-light {
+                width: 25.25rem;
+                height: 4rem;
+                position: absolute;
+                top: 0;
+                left: 12rem;
+                z-index: 3;
+            }
         }
     }
 
@@ -148,55 +62,44 @@
 
 @include mobile {
     .freya {
-        &-hero {
-            height: 53.25rem;
-            padding: 8rem 1.25rem 1.25rem;
-            border-radius: 1rem;
+        .template {
+            &-hero {
 
-            &-card {
-                width: 100%;
-                margin-left: 0rem;
-                margin-top: 0rem;
-                padding: 2rem 1.5rem;
-                &-links {
-                    justify-content: center;
+                &-dashboard1 {
+                    top: 28.5rem;
+                    left: 12rem;
+                    width: 28rem;
                 }
-            }
 
-            &-dashboard1 {
-                top: 30rem;
-                left: 12rem;
-                width: 28rem;
-            }
+                &-dashboard2 {
+                    top: 28.5rem;
+                    left: 1.5rem;
+                    width: 28rem;
+                }
 
-            &-dashboard2 {
-                top: 30rem;
-                left: 1.5rem;
-                width: 28rem;
-            }
+                &-pattern {
+                    width: 70rem;
+                    height: 30rem;
+                }
 
-            &-pattern {
-                width: 70rem;
-                height: 30rem;
-            }
+                &-rectangle1 {
+                    height: 49.125rem;
+                    left: 10rem;
+                    position: absolute;
+                    top: 0;
+                    left: -10.125rem;
+                    z-index: 1;
+                }
 
-            &-rectangle1 {
-                height: 49.125rem;
-                left: 10rem;
-                position: absolute;
-                top: 0;
-                left: -10.125rem;
-                z-index: 1;
-            }
-
-            &-light {
-                width: 25.25rem;
-                height: 6rem;
-                position: absolute;
-                top: 0;
-                left: 50%;
-                transform: translateX(-50%);
-                z-index: 3;
+                &-light {
+                    width: 25.25rem;
+                    height: 6rem;
+                    position: absolute;
+                    top: 0;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    z-index: 3;
+                }
             }
         }
 
