--- a/styles/layout/templates/_templates.scss
+++ b/styles/layout/templates/_templates.scss
@@ -1,3 +1,9 @@
+.template {
+    display: flex;
+    flex-direction: column;
+    gap: 2.19rem;
+}
+
 // TEMPLATE YOUTUBE
 .template {
     &-youtube {
@@ -26,6 +32,7 @@
             padding-bottom: 56.25%;
             height: 100%;
             overflow: hidden;
+
             iframe {
                 position: absolute;
                 top: 0;
@@ -159,9 +166,13 @@
             &-top {
                 width: 100%;
                 margin-bottom: 1.25rem;
-
+                background: var(--surface-100, #FFF);
+                border-radius: 0.65625rem;
+                overflow: hidden;
                 img {
                     width: 100%;
+                    border-radius: inherit;
+                    margin-bottom: -0.2rem;
                 }
             }
 
@@ -227,13 +238,6 @@
         width: 52.75rem;
         gap: 1.5rem;
 
-        @include mobile {
-            width: 100%;
-            max-width: 40rem;
-            align-items: center;
-            justify-content: center;
-        }
-
         &-card {
             width: 25.625rem;
             padding: 1.25rem;
@@ -241,25 +245,24 @@
             border: 1px solid var(--surface-200);
             background: var(--surface-0);
 
-            &-img {
+            &-image {
                 height: 15.125rem;
                 width: auto;
+                background: var(--surface-100);
+                border-radius: 0.65625rem;
+                img{
+                    border-radius: inherit;
+                    width: 100%;
+                    height: auto;
+                }
             }
 
             &-withMargin {
                 margin-top: 7.81rem;
-
-                @include mobile {
-                    margin-top: 0;
-                }
             }
 
             &-withoutMargin {
                 margin-top: -7.81rem;
-
-                @include mobile {
-                    margin-top: 0;
-                }
             }
 
             h2 {
@@ -512,11 +515,14 @@
 
             &-screen {
                 border-radius: 0.5rem;
+
                 &-top {
                     border-radius: 0.5rem 0.5rem 0rem 0rem;
                 }
+
                 &-bottom {
-                    border-radius: 0rem 0rem 0.5rem 0.5rem ;
+                    border-radius: 0rem 0rem 0.5rem 0.5rem;
+
                     &-logo {
                         width: 5.25rem;
                         height: 5.25rem;
@@ -562,7 +568,8 @@
         width: fit-content;
 
         &-left {
-            width: 30rem;
+            width: 100%;
+            max-width: 30rem;
             display: flex;
             flex-direction: column;
             gap: 1rem;
@@ -620,7 +627,6 @@
         &-right {
             width: 30rem;
             border-radius: 0.875rem;
-
             img {
                 width: 100%;
                 height: auto;
@@ -631,18 +637,23 @@
                 width: 100%;
                 height: 100%;
                 border-radius: 0.75rem;
-                background: var(--surface-ground);
-                padding-top: 3.88rem;
+                background: var(--surface-100);
                 position: relative;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
 
                 &-image {
-                    width: 25.4375rem;
-                    margin: 1.25rem auto 0;
+                    width: 90%;
+                    max-height: 22.25rem;
+                    overflow: hidden;
+                    position: relative;
+                    margin-top: 1.25rem;
+                    border-radius: 0.5rem;
+                    box-shadow: 0px 0px 48px 0px rgba(0, 0, 0, 0.08);
 
-                    img {
-                        box-shadow: 0px 0px 48px 0px rgba(0, 0, 0, 0.08);
-                        border-radius: 0.25rem;
-                    }
+                    img {}
                 }
 
                 &-tabs {
@@ -651,17 +662,16 @@
                     gap: 0.25rem;
                     border-radius: 2.5rem;
                     border: 1px solid var(--surface-border);
-                    background: #FFF;
+                    background: var(--surface-0);
                     padding: 0.25rem;
-                    width: fit-content;
-                    margin: 0 auto 0;
-
-
+                    width: 90%;
                     button {
+                        flex: 1;
+                        width: 100%;
                         padding: 0.21875rem 0.5rem;
                         border-radius: 2.25rem;
                         color: var(--surface-900);
-                        background: #fff;
+                        background: var(--surface-0);
                         border: none;
                         outline: none;
                         font-size: 0.75rem;
@@ -672,14 +682,14 @@
                         transition: all 0.15s ease;
 
                         &:hover {
-                            background: var(--surface-ground);
+                            background: var(--surface-100);
                         }
 
 
                     }
 
                     &-btnActive {
-                        background: var(--surface-ground) !important;
+                        background: var(--surface-100) !important;
 
                     }
                 }
@@ -718,7 +728,151 @@
             &-right {
                 border-radius: 0.48169rem;
                 width: 100%;
+                min-width: 0rem;
+                &-inline {
+                    height: 18rem;
+
+                    &-image {
+                        width: 90%;
+                        margin: 0;
+                        height: auto;
+                    }
+
+                    &-tabs {
+                        display: none;
+                    }
+                }
             }
         }
+    }
+}
+
+// TEMPLATE HERO
+.template {
+    display: flex;
+    flex-direction: column;
+    gap: 2.19rem;
+
+    &-hero {
+        width: 100%;
+        height: 36.25rem;
+        background: #1D1D1D;
+        border-radius: 2rem;
+        position: relative;
+        overflow: hidden;
+
+        &-card {
+            position: relative;
+            z-index: 26;
+            width: 29rem;
+            margin-left: 10rem;
+            margin-top: 9.81rem;
+            border-radius: 1.5rem;
+            border: 1px solid rgba(255, 255, 255, 0.24);
+            background: linear-gradient(180deg, rgba(170, 140, 255, 0.00) 0%, rgba(170, 140, 255, 0.80) 100%), rgba(255, 255, 255, 0.10);
+            box-shadow: 0px 2px 4px 0px rgba(255, 255, 255, 0.24) inset, 0px 48px 80px 0px rgba(0, 0, 0, 0.08), 0px -5px 13px -2px rgba(255, 255, 255, 0.55) inset;
+            backdrop-filter: blur(2px);
+            padding: 2.25rem 1.75rem;
+
+            &-logo {
+                height: 2.5rem;
+            }
+
+            p {
+                color: #FFF;
+                font-size: 0.875rem;
+                font-weight: 400;
+                line-height: normal;
+                margin: 1rem 0 0;
+            }
+
+            &-buttons {
+                display: flex;
+                align-items: center;
+                gap: 1rem;
+                margin-top: 2rem;
+
+                a {
+                    text-decoration: none;
+                    height: 2.5rem;
+                    flex: 1;
+                    border-radius: 3rem;
+                    color: #fff;
+                    font-size: 0.875rem;
+                    font-weight: 700;
+                    line-height: 1.0625rem;
+                    cursor: pointer;
+                    transition: all 0.15s ease;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                }
+
+                &-btn1 {
+                    border: 1px solid #212121;
+                    background: #212121;
+
+                    &:hover {
+                        border-color: #2563EB;
+                        background-color: #2563EB;
+                    }
+                }
+
+                &-btn2 {
+                    border: 1px solid #3B82F6;
+                    background: #3B82F6;
+
+                    &:hover {
+                        background-color: #2563EB;
+                        border-color: #2563EB;
+                    }
+                }
+            }
+
+            &-links {
+                margin-top: 1rem;
+                display: flex;
+                align-items: center;
+                gap: 1rem;
+
+                a {
+                    display: flex;
+                    align-items: flex-end;
+                    gap: 0.5rem;
+                    color: #fff;
+
+                    span {
+                        font-size: 0.75rem;
+                        font-weight: 300;
+                        line-height: normal;
+                        text-decoration-line: underline;
+                    }
+                }
+            }
+        }
+
+    }
+
+}
+
+@include mobile {
+    .template {
+        &-hero {
+            height: 53.25rem;
+            padding: 7.5rem 1.25rem 1.25rem;
+            border-radius: 1rem;
+
+            &-card {
+                width: 100%;
+                margin-left: 0rem;
+                margin-top: 0rem;
+                padding: 2rem 1.5rem;
+                border-radius: 1.25rem;
+                &-links {
+                    justify-content: center;
+                }
+            }
+        }
+
     }
 }
