--- a/styles/layout/templates/_apollo.scss
+++ b/styles/layout/templates/_apollo.scss
@@ -1,13 +1,12 @@
 .apollo {
     .template {
         &-hero {
-            background: #1D1D1D;
 
             &-card {
-                border: 1px solid rgba(255, 255, 255, 0.24);
-                background: linear-gradient(180deg, rgba(170, 140, 255, 0.00) 0%, rgba(170, 140, 255, 0.80) 100%), rgba(255, 255, 255, 0.10);
-                box-shadow: 0px 2px 4px 0px rgba(255, 255, 255, 0.24) inset, 0px 48px 80px 0px rgba(0, 0, 0, 0.08), 0px -5px 13px -2px rgba(255, 255, 255, 0.55) inset;
-                backdrop-filter: blur(2px);
+                // border: 1px solid rgba(255, 255, 255, 0.24);
+                // background: linear-gradient(180deg, rgba(170, 140, 255, 0.00) 0%, rgba(170, 140, 255, 0.80) 100%), rgba(255, 255, 255, 0.10);
+                // box-shadow: 0px 2px 4px 0px rgba(255, 255, 255, 0.24) inset, 0px 48px 80px 0px rgba(0, 0, 0, 0.08), 0px -5px 13px -2px rgba(255, 255, 255, 0.55) inset;
+                // backdrop-filter: blur(2px);
 
             }
 
@@ -38,25 +37,6 @@
                 z-index: 1;
                 mix-blend-mode: overlay;
             }
-
-            &-rectangle1 {
-                width: 69.6875rem;
-                height: 35.375rem;
-                position: absolute;
-                top: 0;
-                left: 0;
-                z-index: 4;
-                mix-blend-mode: screen;
-            }
-
-            &-light {
-                width: 25.25rem;
-                height: 4rem;
-                position: absolute;
-                top: 0;
-                left: 12rem;
-                z-index: 5;
-            }
         }
     }
 
@@ -82,24 +62,6 @@
                     width: 90rem;
                 }
 
-                &-rectangle1 {
-                    height: 49.125rem;
-                    left: 10rem;
-                    position: absolute;
-                    top: 0;
-                    left: -10.125rem;
-                    z-index: 1;
-                }
-
-                &-light {
-                    width: 25.25rem;
-                    height: 6rem;
-                    position: absolute;
-                    top: 0;
-                    left: 50%;
-                    transform: translateX(-50%);
-                    z-index: 3;
-                }
             }
         }
 
